console updates for new radio control method

--- a/console/index.html
+++ b/console/index.html
@@ -121,7 +121,7 @@
                             <div class="selected-tab"></div>
                             <!-- Header -->
                             <div class="header">
-                                <h2>Placeholder Name</h2>
+                                <h2 class="radio-name" title="Placeholder description">Placeholder Name</h2>
                                 <div class="icon-stack">
                                     <!-- Scan Icon -->
                                     <div class="scan-icons">
