small console updates

--- a/console/index.html
+++ b/console/index.html
@@ -475,7 +475,7 @@
         </template>
 
         <!-- Sound Files -->
-        <audio src="sound/ptt.wav" id="sound-ptt" autostart="false" autostart="0" class="ui-audio"></audio>
+        <audio src="sound/ptt_new.wav" id="sound-ptt" autostart="false" autostart="0" class="ui-audio"></audio>
         <audio src="sound/ptt_end.wav" id="sound-ptt-end" autostart="false" autostart="0" class="ui-audio"></audio>
         <audio src="sound/click.wav" id="sound-click" autostart="false" autostart="0" class="ui-audio"></audio>
 
