--- a/console/index.html
+++ b/console/index.html
@@ -122,7 +122,7 @@
             <!-- Main Layout for Radio Entries -->
             <div id="main-layout">
 
-                <!-- Placeholder radio card for development  -->
+                <!-- Radio Card Template  -->
                 <template id="card-template">
                     <div class="radio-card disconnected">
                         <div class="card">
@@ -156,7 +156,9 @@
                                             <input type="range" class="topcoat-range radio-pan" min="-1" max="1" value="0" step="0.1" onclick="stopClick(event, this)" oninput="changePan(event, this)" ondblclick="centerPan(event, this)">
                                         </div>
                                     <!-- Mute Button -->
-                                    <a href="#" onclick="muteButton(event, this)" class="enabled"><ion-icon name="volume-high-sharp" id="icon-mute"></ion-icon></a>
+                                    <a href="#" onclick="muteButton(event, this)" class="enabled"><ion-icon name="volume-high-sharp" class="icon-mute"></ion-icon></a>
+                                    <!-- Restart Icon -->
+                                    <a href="#" onclick="restartRadio(event, this)"><ion-icon name="reload-sharp" class="icon-restart"></ion-icon></a>
                                     <!-- Connection Icon -->
                                     <a href="#" onclick="connectButton(event, this)" title="Disconnected"><ion-icon name="connection-sharp" class="icon-connect disconnected"></ion-icon></a>
                                 </div>
