updated console client for rc2-dvm integration

--- a/console/index.html
+++ b/console/index.html
@@ -509,6 +509,7 @@
         <audio src="sound/ptt_new.wav" id="sound-ptt" autostart="false" autostart="0" class="ui-audio"></audio>
         <audio src="sound/ptt_end.wav" id="sound-ptt-end" autostart="false" autostart="0" class="ui-audio"></audio>
         <audio src="sound/click.wav" id="sound-click" autostart="false" autostart="0" class="ui-audio"></audio>
+        <audio src="sound/error.wav" id="sound-error" autostart="false" autostart="0" class="ui-audio"></audio>
 
         <!-- Icon Script -->
         <script type="module" src="ionicons/ionicons.esm.js"></script>
