large updates to radio configuration management and theming

--- a/console/dialogs/midi.html
+++ b/console/dialogs/midi.html
@@ -4,16 +4,16 @@
         <title>Configure MIDI Interface</title>
 
         <!-- Topcoat CSS -->
-        <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-dark.css">
+        <link rel="stylesheet" type="text/css" href="../css/topcoat-mobile-dark.css">
 
         <!-- CSS.gg Icons -->
         <link href='https://css.gg/css' rel='stylesheet'>
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="css/custom.css">
+        <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
         <!-- JQuery -->
-        <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="../jquery-3.6.0.min.js"></script>
 
         <!-- Local Styles -->
         <style>
