Minor spelling mistake on the extension screen.

--- a/console/index.html
+++ b/console/index.html
@@ -483,7 +483,7 @@
                     <!-- Extension Address -->
                     <tr>
                         <td>
-                            <h3>Etension Address</h3>
+                            <h3>Extension Address</h3>
                         </td>
                         <td>
                             <input type="text" id="extension-address" class="topcoat-text-input" placeholder="localhost" value="">
@@ -492,7 +492,7 @@
                     <!-- Extension Port -->
                     <tr>
                         <td>
-                            <h3>Etension Port</h3>
+                            <h3>Extension Port</h3>
                         </td>
                         <td>
                             <input type="text" id="extension-port" class="topcoat-text-input" placeholder="10800" value="">
