Adjusted call log card css to work with status icons.

--- a/console/index.html
+++ b/console/index.html
@@ -202,7 +202,7 @@
                                     <!-- Zone Text -->
                                     <div id="zone-text">Zone Text</div>
                                     <!-- Radio Card Icons -->
-                                    <div class="icon-stack">
+                                    <div class="icon-stack no-toggle">
                                         <!-- Scan Icon -->
                                         <div class="scan-icons card-icon">
                                             <ion-icon name="moto-scan-dot" class="scan-icon-bg"></ion-icon>
